doc(e2e): rewrite docs detox and merge master (#519)

--- a/packages/ui/docs/foundation/testing.ru.mdx
+++ b/packages/ui/docs/foundation/testing.ru.mdx
@@ -1,13 +1,15 @@
 # Тестирование
 
-Для e2e тестирование на мобильных платформах в Styleguide используется библиотека [Detox](https://github.com/wix/Detox) и test-runner [Jest](https://jestjs.io/)
+Для e2e тестирование на мобильных платформах используется библиотека [Detox](https://github.com/wix/Detox) и test-runner [Jest](https://jestjs.io/)
 
 ## Запуск тестов
 
-Для локального запуска тестирования Styleguide необходимо выполнить следующие команды:
-  - `yarn test:build:ios` - соберет приложение iOS (обязательно в первый раз и после установки новых пакетов)
-  - `yarn test` - запустит тесты
+Для запуска команд `@startupjs/e2e` необходимо глобально установить `detox-cli` -- `npm i detox-cli -g`
 
+Для локального запуска e2e-тестирования необходимо выполнить следующие команды:
+  - `npx statrupjs test --init` - создаст необходимые файлы конфигураций для Detox в корне проекта (папку e2e, .detoxrc.js, .env.detox)
+  - `npx statrupjs test --build` - соберет приложение iOS (обязательно в первый раз или после установки новых пакетов)
+  - `npx statrupjs test --ios` - запустит тесты в iOS симуляторе. (с флагом `--artifacts` во время тестов появятся скриншоты приложения во время тестов в папке `/artifacts`)
 
 ## Написание тестов
 
@@ -15,7 +17,7 @@
 
 ### Создание файла с тестами
 
-В корне папки компонента создайте файл `*.e2e.js` и добавте в него минимальный шаблон:
+В папке `e2e` в корне вашего проекта, создайте файл `*.e2e.js` и добавте в него минимальный шаблон:
 
 ```js
 describe('Example', () => {
